# ai-workshop-devcontainer

./: .gitignore  README.md  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-start.sh
src/ai_workshop/: __main__.py  app.py
