[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ai-workshop"
version = "0.1.0"
description = "Minimal scaffolding for a Python AI workshop project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ai-workshop = "ai_workshop.app:main"

[dependency-groups]
dev = [
  "black>=25.1.0",
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "ruff>=0.11.0",
]
